welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:3: error: not found: type In
  var e2:In=math.abs(b-10)
         ^